[fix bug 1362056] Reduce empty whitespace at top of global nav

--- a/media/css/base/global-nav.less
+++ b/media/css/base/global-nav.less
@@ -121,12 +121,12 @@
     .nav-horizontal-menu {
         .clearfix;
         margin-left: 17px;
-        padding: 40px 0 10px;
+        padding: 25px 0 10px;
         position: relative;
         overflow: hidden;
 
         @media only screen and (max-width: @breakNavTablet) {
-            padding-top: 20px;
+            padding-top: 10px;
         }
 
         @media only screen and (max-width: @breakNavDesktop) {
